# labanquinha_api

./: .env  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: admin_orders.py  auth.py  orders.py  products.py  users.py
app/core/: config.py  security.py
app/crud/: crud_order.py  crud_product.py  crud_user.py
app/db/: session.py
app/schemas/: order.py  product.py  token.py  user.py
tests/: conftest.py  test_auth.py  test_main.py
